public interface Commons {
    // Use a standard window size for classic Space Invaders visuals
    int BOARD_WIDTH = 640;
    int BOARD_HEIGTH = 480;
    int BORDER_RIGHT = 30;
    int BORDER_LEFT = 30;
    int GROUND = 440;
    int BOMB_HEIGHT = 5;
    int ALIEN_HEIGHT = 25;
    int ALIEN_WIDTH = 25;
    int NUMBER_OF_ALIENS_TO_DESTROY = 24;
    int CHANCE = 5;
    int DELAY = 17;
    int GO_DOWN = 25;
    int PLAYER_WIDTH = 25;
    int PLAYER_HEIGHT = 25;
}
